2019.12.06 Version 8.6.0
 * Added the skipDecode flag to the generate sas method on CloudBlob. This flag allows the customer to skip the url decode that happens by default on the string to sign right before signing. This resolves some problems with custom values for some of the query parameters when used with third party clients.

2019.12.02 Version 8.5.0
 * Support for HTTP proxy with Basic auth.
 * Support for HTTP proxy with Digest auth.
 * Added an option to SharedAccessHeaders that will allow the customer to preserve the raw value set on the object. Headers could previously be changed by an internal url decode that might modified the desired value.

2019.08.05 Version 8.4.0
 * Support for 2019-02-02 REST version. Please see our REST API documentation and blogs for information about the related added features.
 * Added support for setting rehydrate priority for SetBlobTier and CopyBlob APIs.
 * Added support for PutRangeFromURL API to writes bytes from one Azure File endpoint into the specified range of another Azure File endpoint.
 * Added setDirectoryProperties, createPermission, and getPermission APIs to the File package.
 * Added required headers for creatFile, createDirectory, setFileProperties, getFileProperties, getDirectoryProperties, getFile APIs.
 * Updated getFileProperties, getDirectoryProperties, and getFile calls to update SMB properties.
 * Added support for setting access tier for PutBlob/PutBlockList and CopyBlob APIs.
 * Added support for batching blob operations. Currently the only batchable apis are deleteBlob and setBlobTier.

2019.04.23 Version 8.3.0
 * Fixed a bug in the range download to InputStream that would throw an exception if the source blob was empty.
 * Added support for List/Close File Handles APIs.

2019.04.05 Version 8.2.0
 * Support for 2018-11-09 REST version. Please see our REST API documentation and blogs for information about the related added features.